<resources>
    <string name="app_name">INFAMILY</string>
    <string name="request_setting_permissions">Вы отключили некоторые разрешения, включите их в настройках</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="second_activity_title">Законы КР об усыновлении</string>
    <string name="infamily">inFamily</string>
    <string name="contacts">Контакты</string>
    <string name="address">Адрес</string>
    <string name="shedule">График</string>
    <string name="info">Описание</string>
    <string name="category1">Хотите стать приемным родителем/опекуном?</string>
    <string name="category2">У вас есть приемный ребенок?</string>
    <string name="category3">Вы являетесь приемным родителем/опекуном?</string>
    <string name="section_information">Информация об опекунстве/усыновлении</string>
    <string name="section_documents">Процесс сбора документов</string>
    <string name="section_test_ready">Тест. Готовы ли вы?</string>
    <string name="section_test"><![CDATA[<b><font color="#6ED3FF">ТЕСТ.</font><br>Готовы ли вы?<b>]]></string>
    <string name="pick_photo_from_camera">Камера</string>
    <string name="pick_photo_from_gallery">Галерея</string>
    <string name="main_menu">Главное меню</string>
    <string name="first_title">Порядок установления опеки и попечительства над
        нуждающимся в установлении опеки и попечительства лицами</string>
    <string-array name="documents_list">
        <item>Полная автобиография</item>
        <item>Справка с места работы</item>
        <item>Справка о заработной плате</item>
        <item>Справка органов внутренних дел</item>
        <item>Медицинское заключение</item>
        <item>Xарактеристика с места работы и Характеристика с места жительства</item>
        
        
    </string-array>
    <string-array name="documents__info_list">
        <item>Полная автобиография</item>
        <item>Cправка с места работы с указанием должности и заработной платы либо копия декларации о <доходах></доходах></item>
        <item>Копия сведения о совокупном доходе граждан и выписка из домовой книги с места жительства или документ,
            подтверждающий право собственности на жилое помещение</item>
        <item>Справка органов внутренних дел об отсутствии судимости</item>
        <item>Медицинское заключение государственного лечебно-профилактического учреждения о состоянии
            здоровья лица и членов его семьи, желающего усыновить ребенка, оформленное в порядке,
            установленном Министерством здравоохранения Кыргызской Республики </item>
        <item>Заключение органа опеки и попечительства по месту жительства, подтверждающее возможность кандидатов
            быть усыновителями
            (на каждого члена приемной семьи)</item>
        <item>Копия свидетельства о браке (если состоят в браке)</item>
        <item>Xарактеристика с места работы и с места жительства</item>
        <item>Акт обследования жилищно-бытовых условий семьи</item>
        <item>Справка с места жительства и о составе семьи</item>

    </string-array>
    <string name="title_sbor_documentov">Перечень необходимых \nдокументов</string>
    <string name="video">Видео</string>
    <string name="book">Книга</string>
    <string name="site">Полезные сайты</string>
    <string name="audio">Аудио</string>
    <string name="psyhology">Психологи</string>
    <string name="ginekology">Гинекологи</string>
    <string name="mediki">Медики</string>
    <string name="soc_rabotniki">Социальные работники</string>
    <string name="dosug">Досуг</string>
    <string name="save_understanding">Как сохранить взаимопонимание?</string>
    <string name="advices">Базовые советы по решению конфликтов</string>
    <string name="edit_text_name">Имя:</string>
    <string name="hint_edit_text_name">Иван Иванов</string>
    <string name="phone_number_text">Телефон:</string>
    <string name="hint_phone_number">0777 777 777</string>
    <string name="e_mail_text">E-mail</string>
    <string name="hint_email">ivan-ivanov@ivan.com</string>
    <string name="med_spravka_text">Медицинская справка</string>
    <string name="spravka_text">Cправка</string>
    <string name="submit_text">Сохранить и отправить</string>
    <string name="medspravka_title">Медицинская справка</string>
    <string name="description_hint_medspravka">Описание...\n\n\n\n</string>
    <string name="hint_text_shedule">Расписание...</string>
    <string name="hint_text_adress">Адрес...</string>
    <string name="hint_text_phone">Телефон...</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="foster">Фостерное опекунство</string>
    <string name="adoption">Усыновление</string>
    <string name="guardianship">Опекунство и попечительство</string>
    <string name="faq">    1. Заявление о желании усыновить ребенка подается усыновителями в отделы по поддержке семьи и детей по месту жительства или месту нахождения усыновляемого.
        Отделы по поддержке семьи и детей обязаны произвести обследование условий жизни лица, желающего усыновить ребенка, проверить, не имеется ли препятствий для усыновления, будет ли усыновление отвечать интересам ребенка, выявить отношение ребенка к усыновителю, оказать усыновителю содействие в сборе необходимых документов, передать материалы со своим заключением на рассмотрение местной государственной администрации, мэрии города.
        2. Материалы об усыновлении ребенка подлежат рассмотрению местной государственной администрацией или мэрией города не позднее месячного срока с вынесением соответствующего решения.
        Порядок передачи детей на усыновление, а также осуществления контроля за условиями жизни и воспитания детей в семьях усыновителей на территории Кыргызской Республики определяется Правительством Кыргызской Республики, кроме случаев усыновления (удочерения) граждан Кыргызской Республики иностранными гражданами и лицами без гражданства.
        3. Права и обязанности усыновителя и усыновленного ребенка возникают со времени вынесения решения местной государственной администрации, мэрии города об усыновлении ребенка.
        Отделы по поддержке семьи и детей по месту вынесения решения об усыновлении ребенка обязаны не позднее двухнедельного срока направить копию решения местной государственной администрации, мэрии города об усыновлении ребенка в органы записи актов гражданского состояния.
        Усыновление ребенка подлежит государственной регистрации в порядке, установленном для государственной регистрации актов гражданского состояния.


        Контакты ОПСД
        -ОПСД Ленинского района, т.:656906, Пр.Чуй 315
        -ОПСД Октябрьского района, т.: 897345, ул. Байтик Баатыра 17 (Медерова)
        -ОПСД Первомайского района, т.:325484, ул. Жибек Жолу 348 (Логвиненко) 
        -ОПСД Свердловского района, т.:360103, Пр.Чуй 28
        -ОПСД Аламудунского района, т.:36-72-92, 36-72-93, ул.Токмакская (Салиева) 138
    </string>
    <string name="auth_descripton">Пожалуйста заполните все нижеописанные поля
    для возможности отправки зявки,а так же чтобы при случае необходимости мы смогли
    с вами связаться</string>
    <string name="bad_result">Вы готовы стать приемным родителем на %s%%, рекомендуем обсудить вопросы данного теста со специалистом (психологом, соц.работником, опытными приёмными родителями)</string>
    <string name="your_result_text">Ваш результат:</string>
    <string name="result_submit_text">Подтвердить</string>
</resources>