<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="116dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:paddingLeft="@dimen/size_16"
        android:paddingRight="@dimen/size_16"
        android:text="@string/auth_descripton"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/size_16"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/hint_edit_text_name"
        android:inputType="textPersonName"
        android:textColor="@color/colorBlack" />


    <EditText
        android:id="@+id/edit_mail"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="219dp"
        android:ems="19"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorBlack"
        tools:ignore="UnknownId" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:ems="10"
        android:hint="@string/hint_phone_number"
        android:inputType="phone"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/btn_auth"
        style="@style/submitButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:text="Cохранить" />
</RelativeLayout>