<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/size_14"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="480dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"

        android:background="@drawable/dosya_rectangle"
        android:orientation="vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/your_result_text"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/size_25"
            android:textStyle="bold"
            tools:ignore="SpUsage" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            >

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="280dp"
                android:layout_height="280dp"
                android:layout_centerInParent="true"

                android:background="@drawable/circle_shape"
                android:indeterminate="false"
                android:max="100"
                android:progress="65"
                android:progressDrawable="@drawable/circular_progress_bar" />

            <TextView

                android:id="@+id/txtProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/progressBar"
                android:layout_centerInParent="true"
                android:fontFamily="@font/noto_sans_regular"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_50"
                tools:ignore="SpUsage"
                tools:text="77%" />
        </RelativeLayout>

        <TextView
            android:id="@+id/result_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="@dimen/size_10"
            android:layout_marginStart="10dp"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:maxLines="4"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/size_25"
            tools:ignore="SpUsage"
            tools:text="@string/bad_result" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit_result"
        android:layout_width="@dimen/size_280"
        android:layout_height="@dimen/size_40"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/dosya_rectangle_blue"
        android:text="@string/result_submit_text"
        android:textColor="@color/white" />
</RelativeLayout>